@@ -21,8 +21,6 @@
  */
 package com.github._1c_syntax.bsl.languageserver.utils;
 
-import com.github._1c_syntax.bsl.languageserver.context.symbol.ModuleSymbol;
-import com.github._1c_syntax.bsl.parser.BSLLexer;
 import lombok.experimental.UtilityClass;
 import org.antlr.v4.runtime.ParserRuleContext;
 import org.antlr.v4.runtime.Token;
@@ -34,9 +32,7 @@ import org.eclipse.lsp4j.jsonrpc.util.Preconditions;
 import org.eclipse.lsp4j.util.Positions;
 import org.jspecify.annotations.Nullable;
 
-import java.util.Collection;
 import java.util.List;
-import java.util.Optional;
 
 /**
  * Набор методов для удобства работы с областями текста (ренджами)
@@ -68,8 +64,8 @@ public final class Ranges {
    *
    * @param startLine Начальная строка
    * @param startChar Начальный символ
-   * @param endLine Конечная строка
-   * @param endChar Конечный символ
+   * @param endLine   Конечная строка
+   * @param endChar   Конечный символ
    * @return Созданный диапазон
    */
   public Range create(int startLine, int startChar, int endLine, int endChar) {
@@ -102,7 +98,7 @@ public final class Ranges {
    * Создать диапазон от начала одного контекста до конца другого.
    *
    * @param startCtx Начальный контекст
-   * @param endCtx Конечный контекст
+   * @param endCtx   Конечный контекст
    * @return Диапазон между контекстами
    */
   public Range create(ParserRuleContext startCtx, ParserRuleContext endCtx) {
@@ -113,7 +109,7 @@ public final class Ranges {
    * Создать диапазон из токенов.
    *
    * @param startToken Начальный токен
-   * @param endToken Конечный токен
+   * @param endToken   Конечный токен
    * @return Диапазон между токенами
    */
   public Range create(Token startToken, @Nullable Token endToken) {
@@ -141,8 +137,8 @@ public final class Ranges {
     if (tokens.isEmpty()) {
       return Ranges.create();
     }
-    var firstElement = tokens.get(0);
-    var lastElement = tokens.get(tokens.size() - 1);
+    var firstElement = tokens.getFirst();
+    var lastElement = tokens.getLast();
 
     return Ranges.create(firstElement, lastElement);
   }
@@ -153,15 +149,19 @@ public final class Ranges {
    * @param terminalNode Терминальный узел
    * @return Диапазон узла
    */
-  public Range create(TerminalNode terminalNode) {
-    return create(terminalNode.getSymbol());
+  public Range create(@Nullable TerminalNode terminalNode) {
+    if (terminalNode == null) {
+      return create();
+    } else {
+      return create(terminalNode.getSymbol());
+    }
   }
 
   /**
    * Создать диапазон между двумя терминальными узлами.
    *
    * @param startTerminalNode Начальный узел
-   * @param stopTerminalNode Конечный узел
+   * @param stopTerminalNode  Конечный узел
    * @return Диапазон между узлами
    */
   public Range create(TerminalNode startTerminalNode, TerminalNode stopTerminalNode) {
@@ -190,15 +190,12 @@ public final class Ranges {
    * @return - полученный Range.
    */
   public Range create(ParseTree tree) {
-    if (tree instanceof TerminalNode node) {
-      return Ranges.create(node);
-    } else if (tree instanceof Token token) {
-      return Ranges.create(token);
-    } else if (tree instanceof ParserRuleContext context) {
-      return Ranges.create(context);
-    } else {
-      throw new IllegalArgumentException();
-    }
+    return switch (tree) {
+      case TerminalNode node -> Ranges.create(node);
+      case Token token -> Ranges.create(token);
+      case ParserRuleContext context -> Ranges.create(context);
+      default -> throw new IllegalArgumentException();
+    };
   }
 
   public boolean containsRange(Range bigger, Range smaller) {
@@ -210,7 +207,7 @@ public final class Ranges {
     Preconditions.checkNotNull(position, "position");
     return range.getStart().equals(position)
       || (Positions.isBefore(range.getStart(), position)
-        && Positions.isBefore(position, range.getEnd()));
+      && Positions.isBefore(position, range.getEnd()));
   }
 
   /**
@@ -275,7 +272,6 @@ public final class Ranges {
   }
 
 
-
   /**
    * Натуральный порядок сравнения Range
    *
@@ -284,11 +280,11 @@ public final class Ranges {
    * @return 0 - равно, 1 - больше, -1 - меньше
    */
   public int compare(Range o1, Range o2) {
-    if (o1.equals(o2)){
+    if (o1.equals(o2)) {
       return 0;
     }
     final var startCompare = compare(o1.getStart(), o2.getStart());
-    if (startCompare != 0){
+    if (startCompare != 0) {
       return startCompare;
     }
     return compare(o1.getEnd(), o2.getEnd());
@@ -302,7 +298,7 @@ public final class Ranges {
    * @return 0 - равно, 1 - больше, -1 - меньше
    */
   public int compare(Position pos1, Position pos2) {
-    if (pos1.equals(pos2)){
+    if (pos1.equals(pos2)) {
       return 0;
     }
 
