@@ -57,7 +57,7 @@ class CognitiveComplexityInlayHintSupplierTest {
 
     // given
     var documentContext = TestUtils.getDocumentContextFromFile(FILE_PATH);
-    MethodSymbol firstMethod = documentContext.getSymbolTree().getMethods().get(0);
+    MethodSymbol firstMethod = documentContext.getSymbolTree().getMethods().getFirst();
     var methodName = firstMethod.getName();
 
     var textDocumentIdentifier = TestUtils.getTextDocumentIdentifier(documentContext.getUri());
