@@ -79,7 +79,7 @@ class DefinitionProviderTest extends AbstractServerContextAwareTest {
     // then
     assertThat(definitions).hasSize(1);
 
-    var definition = definitions.get(0);
+    var definition = definitions.getFirst();
 
     assertThat(definition.getTargetUri()).isEqualTo(documentContext.getUri().toString());
     assertThat(definition.getTargetSelectionRange()).isEqualTo(methodSymbol.getSelectionRange());
@@ -102,7 +102,7 @@ class DefinitionProviderTest extends AbstractServerContextAwareTest {
     // then
     assertThat(definitions).hasSize(1);
 
-    var definition = definitions.get(0);
+    var definition = definitions.getFirst();
 
     assertThat(definition.getTargetUri()).isEqualTo(managerModule.getUri().toString());
     assertThat(definition.getTargetSelectionRange()).isEqualTo(methodSymbol.getSelectionRange());
@@ -128,7 +128,7 @@ class DefinitionProviderTest extends AbstractServerContextAwareTest {
     // then
     assertThat(definitions).hasSize(1);
 
-    var definition = definitions.get(0);
+    var definition = definitions.getFirst();
 
     assertThat(definition.getTargetUri()).isEqualTo(commonModule.getUri().toString());
     assertThat(definition.getTargetSelectionRange()).isEqualTo(moduleSymbol.getSelectionRange());
